[package]
name = "blob-war"
version = "0.0.0"
authors = ["linucc<linucc@linu.cc"]
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.9"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
num-traits = "0.2"
num-derive = "0.3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
